EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Contact__c.field-meta.xml
<CustomField>
    <fullName>hed__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student for whom the grade is being recorded. When left blank, Contact autopopulates from the valid Course Connection on save.</description>
    <inlineHelpText>El estudiante para el que se está registrando la evaluación. Cuando se deja en blanco, Contacto se rellena automáticamente desde la Conexión de curso válida al guardar.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Term Grades</relationshipLabel>
    <relationshipName>Term_Grades</relationshipName>
    <type>Lookup</type>
</CustomField>