EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>hed__Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The class in which the student received this grade. The Contact and Course Offering on Term Grade must match the Contact and Course Offering on the Course Connection record.</description>
    <inlineHelpText>La clase en la que el estudiante recibió esta evaluación. Contacto y Oferta de curso en Evaluación de periodo debe coincidir con Contacto y Oferta de curso en el registro Conexión de curso</inlineHelpText>
    <label>Course Connection</label>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>Term Grades</relationshipLabel>
    <relationshipName>Term_Grades</relationshipName>
    <type>Lookup</type>
</CustomField>