EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Credits_Attempted__c.field-meta.xml
<CustomField>
    <fullName>hed__Credits_Attempted__c</fullName>
    <description>The number of credits available this Term for this Course.</description>
    <inlineHelpText>En número de créditos disponibles este plazo para este curso.</inlineHelpText>
    <label>Credits Attempted</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>