EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>hed__Credits_Earned__c</fullName>
    <description>The number of credits the student earned this term for this course.</description>
    <inlineHelpText>El número de créditos que obtuvo el estudiante este plazo para este curso.</inlineHelpText>
    <label>Credits Earned</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>