EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Numerical_Grade__c.field-meta.xml
<CustomField>
    <fullName>hed__Numerical_Grade__c</fullName>
    <description>If your school uses numeric grades, enter the numeric grade the student earned.</description>
    <inlineHelpText>Si su escuela utiliza evaluaciones numéricas, ingrese el número de la evaluación que obtuvo el estudiante.</inlineHelpText>
    <label>Numerical Grade</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>